--- a/vignettes/flowDensity.Rmd
+++ b/vignettes/flowDensity.Rmd
@@ -7,7 +7,8 @@ output:
     toc: yes
     toc_float: yes
 author: Mehrnoush Malek <mmalekes@bccrc.ca>, Jafar Taghiyar
-vignette: >    
+vignette: >   
+  %\VignetteEngine{knitr::rmarkdown}
   %\VignetteKeywords{flow cytometry, gating, import}
   %\VignettePackage{flowDensity}   
   %\VignetteIndexEntry{Introduction to automated gating}   
