--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,8 @@
-1.19.8:
-+ Added density overlays option to plotDens
-+ Updated openCyto wrapper
+flowDensity 1.0.0
+----------------------------------------------------------------
+
+First submission
+
+flowDensity 1.19.8
+----------------------------------------------------------------
+Adding densityoverlay option to plotDens.
